Add SPURTREE to list of companies

--- a/chart.html
+++ b/chart.html
@@ -273,6 +273,7 @@ const companies = [
             [ 'SILUSD', 'STERLING INVESTMENTS LIMITED USD' ],
             [ 'SJ', 'SAGICOR GROUP JAMAICA LIMITED' ],
             [ 'SML', 'STANLEY MOTTA LIMITED ORDINARY SHARES' ],
+            ['SPURTREE','SPUR TREE SPICES JAMAICA LIMITED'],
             [ 'SOS', 'STATIONERY AND OFFICE SUPPLIES LIMITED' ],
             [ 'SRFJMD', 'SYGNUS REAL ESTATE FINANCE LIMITED' ],
             [ 'SRFUSD', 'SYGNUS REAL ESTATE FINANCE LIMITED' ],
